syntax = "proto2";

import "init.proto";
import "irc_message.proto";

package ircbot;

message Message {
    enum MessageType {
        INIT_REQUEST = 1;
        INIT_RESPONSE = 2;
        IRC_MESSAGE = 3;
    }

    required MessageType type = 1;
    oneof data {
        InitRequest init_req = 2;
        InitResponse init_resp = 3;
        IrcMessage irc_msg = 4;
    }
}
